# panoocr

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  theme_version.html
.github/workflows/: docs.yml  publish.yml
api/: index.html
api/dedup/: index.html
api/engines/: index.html
api/geometry/: index.html
api/image/: index.html
api/ocr/: index.html
api/visualization/: index.html
assets/: test-pano.ocr.json
docs/: examples.md  index.md
docs/api/: dedup.md  engines.md  geometry.md  image.md  index.md  ocr.md  visualization.md
examples/: README.md  basic_usage.py  index.html  multi_engine.py
preview/: index.html
search/: search_index.json
src/panoocr/: __init__.py  geometry.py
src/panoocr/api/: __init__.py  client.py  models.py
src/panoocr/dedup/: __init__.py  detection.py
src/panoocr/engines/: __init__.py  dots_ocr.py  easyocr.py  florence2.py  florence2_mlx.py  gemini.py  glm_ocr.py  google_vision.py  macocr.py  paddleocr.py  rapidocr_engine.py  trocr.py
src/panoocr/image/: __init__.py  models.py  perspectives.py
src/panoocr/ocr/: __init__.py  models.py  utils.py
